# MyNotes

./: README.md
MyNotes/: CMakeLists.txt  main.cpp  resources.qrc
MyNotes/Docs/html/: how-to-make-the-app.html  model-qmlmodule.html  myNotes.qhp  mynotes-index.html  mynotes.index  pages-qmlmodule.html  qml-model-datamodel-members.html  qml-model-datamodel.html  qml-pages-notedetailpage-members.html  qml-pages-notedetailpage.html  qml-pages-notespage-members.html  qml-pages-notespage.html
MyNotes/android/: AndroidManifest.xml
MyNotes/android/res/values/: strings.xml
MyNotes/ios/: Project-Info.plist
MyNotes/qdoc/: config.qdocconf
MyNotes/qdoc/src/: MyNotes-index.qdoc  MyNotesMainApplicationModule.qdoc
MyNotes/qml/: Main.qml  config.json
MyNotes/qml/model/: DataModel.qml
MyNotes/qml/pages/: NoteDetailPage.qml  NotesPage.qml  SettingsPage.qml
